tests/test_assets/semantic/invalid/control_flow/unreachable_after_switch.expected
semantic error at line 16: unreachable statement
1 semantic error generated.
